# D2PacketBased

./: CMakeLists.txt  main.cpp  readme.md
D2/: D2Map.cpp  D2Map.h  D2Ptrs.h  D2Structs.h  Offset.cpp  Offset.h
Hooks/: Hook.h  ItemPacket.cpp  LogEvents.cpp  TestPacket.cpp
Models/: Enums.h  Game.cpp  Game.h  Models.h  UsingModels.h  types.h
Models/AOBot/D2Data/: AreaLevel.h  BaseStat.h  BattleNet.h  CharacterClass.h  GameObjects.h  NPCType.h  Players.h  StatType.h  StateType.h
Models/AOBot/D2Data/item/: BaseArmor.cpp  BaseItem.h  BaseItemType.h  BaseMiscItem.cpp  BaseMiscItem.h  BaseProperty.h  BaseRuneword.cpp  BaseRuneword.h  BaseWeapon.cpp  BaseWeapon.h  ItemAffix.h  ItemKind.h  ItemSet.h  ItemSetType.h  ItemStat.h  MagicPrefixType.h  SetItem.h  SetItemType.h  UniqueItem.cpp  UniqueItemType.h
Models/AOBot/Maps/: CollisionMap.cpp  CollisionMap.h  CriticalSection.cpp  CriticalSection.h  Dijkstra.cpp  Dijkstra.h  Maps.cpp  Maps.h  Objects.cpp  Objects.h  TeleportPath.cpp  TeleportPath.h  Thread.cpp  Thread.h  WalkPath.cpp  WalkPath.h  fsa.h  stlastar.h
Models/Client/: Wrappers.h
Models/Collections/: Collection.h  ExtendsCollection.h  IdCollection.h  StatCollection.h  UnitCollection.cpp  UnitCollection.h
Models/Concepts/: IDAble.h  Orb.h  Skill.h  Storable.h  Store.h
Models/D2Data/: AreaLevel.h  BaseLevel.cpp  BaseLevel.h  BaseStat.cpp  DamageType.h  Game.h  Messaging.h  NPCCode.h  Quests.h  SkillTab.h  SkillType.h  Stat.h  UnitType.h  WarpType.h
Models/D2Data/item/: BaseArmor.h  BaseItem.cpp  BaseItem.h  BaseItemType.cpp  BaseProperty.cpp  ItemAffix.cpp  ItemEnums.h  ItemSet.cpp  ItemType.h  MagicSuffixType.h  RunewordType.h  SetItem.cpp  UniqueItem.h
Models/Events/: Event.h  ItemEventEmitter.h  MissileEventEmitter.h  MonsterEventEmitter.h  ObjectEventEmitter.h  PlayerEventEmitter.h  SelfEventEmitter.h  SkillEventEmitter.h  TileEventEmitter.h
Models/Packets/GS/: Identifiers.h  ItemParser.h  Receiving.h  ServerClient.h
Models/Units/: Item.h  Missile.h  Monster.h  Object.h  Player.h  Tile.h  Unit.h
Models/Units/Special/: AlterEgo.h  Ego.h
Tools/: BitReader.h  Compression.cpp  Compression.h
data/: BaseMiscItem.csv  BaseStat.csv  ItemSet.csv
